tests/ifcc-test-output/testfiles-3_02_01_const_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:9: error: ‘_1’ undeclared (first use in this function)
    3 |     x = _1;
      |         ^~
input.c:3:9: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
